--- a/Restaurante_FE/Restaurante/src/app/ementa-consultar/ementa-consultar.component.html
+++ b/Restaurante_FE/Restaurante/src/app/ementa-consultar/ementa-consultar.component.html
@@ -1,32 +1,44 @@
-<div>
-  <h2>Consultar Ementa</h2>
+<div class="container-principal">
+  <div class="container-titulo">
+    <h2>Consultar Ementa</h2>
 
-  <form (ngSubmit)="consultarEmenta()">
-    <label for="data">Data:</label>
-    <input type="date" id="data" [(ngModel)]="data" name="data" required>
+    <form (ngSubmit)="consultarEmenta()">
+      <label for="data">Data:</label>
+      <input type="date" id="data" [(ngModel)]="data" name="data" required>
 
-    <label for="hora">Hora:</label>
-    <input type="time" id="hora" [(ngModel)]="hora" name="hora" required>
+      <label for="hora">Hora:</label>
+      <input type="time" id="hora" [(ngModel)]="hora" name="hora" required>
 
-    <label for="id">Tipo de refeicão (id):</label>
-    <input type="number" id="id" [(ngModel)]="id" name="id" required>
+      <label for="id">Tipo de refeição (id):</label>
+      <input type="number" id="id" [(ngModel)]="id" name="id" required>
 
-    <button type="submit" [disabled]="loading">Consultar</button>
-  </form>
-  
-  <div *ngIf="ementa">
-    <h2>Ementa para o dia {{ ementa[0]?.data | date: 'short' }}</h2>
+      <button type="submit" [disabled]="loading">Consultar</button>
+    </form>
+  </div>
+
+
+  <!-- Exibição de carregamento -->
+  <div *ngIf="loading" class="loading-message">
+    <p>A carregar...</p>
+  </div>
+
+  <!-- Exibição da mensagem de erro -->
+  <div *ngIf="!loading && erro" class="alert alert-danger mt-3">
+    Nenhuma ementa encontrada com os critérios selecionados.
+  </div>
+
+  <!-- Exibição da ementa -->
+  <div *ngIf="ementa" class="container-ementa">
+    <h2>Ementa para o dia {{ ementa[0]?.data | date: 'dd/MM/yyyy' }}</h2>
     <div *ngFor="let item of ementa">
       <p><strong>ID:</strong> {{ item._id }}</p>
-      <p><strong>Data:</strong> {{ item.data | date: 'fullDate' }}</p>
+      <p><strong>Data:</strong> {{ item.data |  date: 'EEEE, d ' + ' of ' + ' MMMM ' }}</p>
       <p><strong>Pratos:</strong> {{ item.pratos.join(', ') }}</p>
       <p><strong>Quantidade Produzida:</strong> {{ item.quantidadeProduzida }}</p>
       <p><strong>Tipo de Refeição:</strong> {{ item.tipoRefeicao }}</p>
     </div>
   </div>
-  
-  
-  <div *ngIf="loading">
-    <p>A carregar...</p>
-  </div>
-</div>
+
+
+
+
