--- a/Restaurante_FE/Restaurante/src/app/refeicao-remove/refeicao-remove.component.css
+++ b/Restaurante_FE/Restaurante/src/app/refeicao-remove/refeicao-remove.component.css
@@ -1,4 +1,4 @@
-.refeicao-Form {
+.refeicaoRemoveForm {
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
@@ -7,19 +7,19 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
-  .refeicao-Form form {
+  .refeicaoRemoveForm form {
     display: flex;
     flex-direction: column;
     gap: 15px;
   }
   
-  .refeicao-Form label {
+  .refeicaoRemoveForm label {
     font-weight: bold;
     color: #333;
   }
   
-  .refeicao-Form select, 
-  .refeicao-Form input {
+  .refeicaoRemoveForm select, 
+  .refeicaoRemoveForm input {
     padding: 8px;
     font-size: 16px;
     border: 1px solid #ccc;
@@ -27,13 +27,13 @@
     width: 100%;
   }
   
-  .refeicao-Form input[type="date"], 
-  .refeicao-Form input[type="number"] {
+  .refeicaoRemoveForm input[type="date"], 
+  .refeicaoRemoveForm input[type="number"] {
     background-color: #fff;
     cursor: pointer;
   }
   
-  .refeicao-Form button {
+  .refeicaoRemoveForm button {
     padding: 10px;
     background-color: #4CAF50;
     color: white;
@@ -44,17 +44,17 @@
     transition: background-color 0.3s;
   }
   
-  .refeicao-Form button:disabled {
+  .refeicaoRemoveForm button:disabled {
     background-color: #ddd;
     cursor: not-allowed;
   }
   
-  .refeicao-Form button:hover:not(:disabled) {
+  .refeicaoRemoveForm button:hover:not(:disabled) {
     background-color: #45a049;
   }
   
   @media (max-width: 600px) {
-    .refeicao-Form {
+    .refeicaoRemoveForm {
       padding: 15px;
     }
   }
